Replacing scheduler and executor binaries from mapr-myriad-scheduler and mapr-myriad-executor packages with the ones that launch container
These binaries are build from this branch
https://github.com/sdaingade/incubator-myriad/tree/post-hack-day

--- a/OnDemandYARNClusters/rm_docker_centos/Dockerfile
+++ b/OnDemandYARNClusters/rm_docker_centos/Dockerfile
@@ -8,6 +8,7 @@ RUN yum -y --nogpgcheck install java-1.7.0-openjdk.x86_64
 RUN echo "exclude=mapr-compat-suse*" >> /etc/yum.conf
 RUN yum clean all
 RUN yum -y --nogpgcheck install mapr-cldb mapr-fileserver mapr-zookeeper mapr-myriad-scheduler mapr-myriad-executor
-
+COPY libs/myriad-scheduler-0.0.1.jar  /opt/mapr/myriad/myriad-0.1/lib/
+COPY libs/myriad-commons-0.0.1.jar  /opt/mapr/myriad/myriad-0.1/lib/
 COPY init-script /usr/bin/init-script
 ENTRYPOINT /usr/bin/init-script
