Limit container memory limit to 8GB for mfs process inside container, and remove export CONTAINER_IP as it is not passed to container this way

--- a/OnDemandYARNClusters/rm_docker_centos/Dockerfile
+++ b/OnDemandYARNClusters/rm_docker_centos/Dockerfile
@@ -10,5 +10,7 @@ RUN yum clean all
 RUN yum -y --nogpgcheck install mapr-cldb mapr-fileserver mapr-zookeeper mapr-myriad-scheduler mapr-myriad-executor
 COPY libs/myriad-scheduler-0.0.1.jar  /opt/mapr/myriad/myriad-0.1/lib/
 COPY libs/myriad-commons-0.0.1.jar  /opt/mapr/myriad/myriad-0.1/lib/
+RUN sed -i 's!/proc/meminfo!/opt/mapr/conf/meminfofake!' /opt/mapr/server/initscripts-common.sh
+
 COPY init-script /usr/bin/init-script
 ENTRYPOINT /usr/bin/init-script
