--- a/OnDemandYARNClusters/rm_docker_ubuntu/Dockerfile
+++ b/OnDemandYARNClusters/rm_docker_ubuntu/Dockerfile
@@ -12,5 +12,7 @@ RUN apt-get -y install openjdk-7-jdk
 RUN apt-get -y --allow-unauthenticated install mapr-cldb mapr-fileserver mapr-zookeeper mapr-myriad-scheduler mapr-myriad-executor
 COPY libs/myriad-scheduler-0.0.1.jar  /opt/mapr/myriad/myriad-0.1/lib/
 COPY libs/myriad-commons-0.0.1.jar  /opt/mapr/myriad/myriad-0.1/lib/
+RUN sed -i 's!/proc/meminfo!/opt/mapr/conf/meminfofake!' /opt/mapr/server/initscripts-common.sh
+
 COPY init-script /usr/bin/init-script
 ENTRYPOINT /usr/bin/init-script
